fix overflow hidden für swipe

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ content {
   background: white !important;
   position: absolute;
   top: 0;
+  overflow: hidden;
 }
 
 #mainPageContent {
@@ -188,6 +189,7 @@ content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 #foodContent {
